# codeforce

./: CMakeLists.txt  README.md
1030A_In_Search_of_an_Easy_Problem_py/: main.py
110A_Nearly_Lucky_Number/: a.out
110A_Nearly_Lucky_Number_cpp/: one.cpp  two.cpp
112A_Petya_and_Strings/: main.cpp
112A_Petya_and_Strings_cpp/: a.out  c_main.cpp
116A_Tram/: a.out  main.cpp
116A_Tram_cpp/: a.out
118A_String_Task/: a.out
118A_String_Task_cpp/: main.cpp
122A_Lucky_Division/: a.out  two.cpp
122A_Lucky_Division_cpp/: one.cpp
131A_cAPS_lOCK/: main.cpp
131A_cAPS_lOCK_cpp/: a.out
1328A_Divisibility_Problem_py/: main.py
1335A_Candies_and_Two_Sisters_py/: main.py
133A_HQ9+/: a.out  one.cpp
136A_Presents/: a.out  one.cpp
1399A_Remove_Smallest/: main.cpp
141A_Amusing_Joke/: main.py
144A_Arrival_of_the_General/: a.out  one.cpp
144A_Arrival_of_the_General_cpp/: a.out  one.cpp
148A_Insomnia_cure/: a.out  one.cpp
155A_I_love_username_cpp/: main.cpp
158A_Next_Round/: a.out  main.cpp
158B_Taxi/: a.out  main.cpp  other_01.cpp
158B_Taxi_STAR_cpp/: a.out
160A_Twins/: a.out  one.cpp
160A_Twins_cpp/: a.out  two.cpp
189A_Cut_Ribbon_cpp/: main.cpp  main_two.cpp  others.cpp
1A_Theatre_Square_cpp/: a.out  main.cpp
200B_Drinks/: main.py
200B_Drinks_cpp/: given.py
208A_Dubstep/: a.out  two.cpp
208A_Dubstep_cpp/: a.out  one.cpp
226A_Stones_on_the_Table/: main.cpp
226A_Stones_on_the_Table_cpp/: a.out
228A_is_your_horseshoe_on_the_other_hoof/: main.py
230A_Dragons_py/: main.py
230B_T-primes_cpp/: a.out  main.cpp
231A_Team_cpp/: a.out  main.cpp
236A_Boy_or_Girl/: a.out  one.cpp
25A_IQ_test/: one.cpp
25A_IQ_test_cpp/: a.out
263A_Beautiful_Matrix/: main.cpp
263A_Beautiful_Matrix_cpp/: a.out
266B_Queue_at_the_School/: a.out  one.cpp
266B_Queue_at_the_School_cpp/: a.out  one.cpp
268A_Games/: a.out
268A_Games_cpp/: one.cpp
271A_Beautiful_Year/: a.out  one.cpp  two.cpp
271A_Beautiful_Year_cpp/: a.out
281A_Word_Capitalization/: main.cpp
281A_Word_Capitalization_cpp/: a.out
282A_Bit++/: a.out
282A_Bit++_cpp/: main.cpp  other.cpp
318A_Even_Odds/: a.out  one.cpp
318A_Even_Odds_STAR_cpp/: a.out
337A_Puzzles/: a.out  one.cpp
339A_Helpful_Maths/: a.out  main.cpp
339A_Helpful_Maths_cpp/: a.out  main.cpp
339B_Xenia_and_Ringroad_py/: main.py
344A_Magnets_cpp/: a.out  one.cpp
405A_Gravity_Flip/: one.cpp
405A_Gravity_Flip_cpp/: a.out
41A_Translation/: a.out
41A_Translation_cpp/: one.cpp
427A_Police_Recruits/: main.cpp
443A_Anton_and_Letters/: a.out  one.cpp
443A_Anton_and_Letters_STAR/: a.out  one.cpp
443A_Anton_and_Letters_STAR_cpp/: one.cpp
443A_Anton_and_Letters_cpp/: a.out  one.cpp
451A_Game_With_Sticks/: a.out  one.cpp  two.cpp
467A_George_and_Accomodation/: a.out  one.cpp
467A_George_and_Accomodation_cpp/: a.out
469A_I_Wanna_Be_the_Guy/: a.out  one.cpp
469A_I_Wanna_Be_the_Guy_cpp/: one.cpp
472A_Design_Tutorial_Learn_from_Math/: a.out  answer.cpp  one.cpp
472A_Design_Tutorial_Learn_from_Math_STAR/: one.cpp
479A_Expression/: a.out  one.cpp
486A_Calculating_Function/: a.out  one.cpp
492B_Vanya_and_Lanterns_py/: main.py
4A_Watermelon/: watermelon.cpp
4A_Watermelon_cpp/: watermelon
4C_Registration_System_py/: main.py
50A_Domino_piling/: a.out  main.cpp
(+47 files in other folders)
