cmake_minimum_required(VERSION 3.21)
project(codeforce)

set(CMAKE_CXX_STANDARD 17)

add_executable(codeforce
#        110A_Nearly_Lucky_Number_cpp/one.cpp
#        110A_Nearly_Lucky_Number_cpp/two.cpp
#        112A_Petya_and_Strings_cpp/c_main.cpp
#        112A_Petya_and_Strings_cpp/main.cpp
#        116A_Tram_cpp/main.cpp
#        118A_String_Task_cpp/main.cpp
#        122A_Lucky_Division_cpp/one.cpp
#        122A_Lucky_Division_cpp/two.cpp
#        131A_cAPS_lOCK_cpp/main.cpp
#        133A_HQ9+_cpp/one.cpp
#        136A_Presents_cpp/one.cpp
#        144A_Arrival_of_the_General_cpp/one.cpp
#        148A_Insomnia_cure_cpp/one.cpp
#        158A_Next_Round_cpp/main.cpp
#        158B_Taxi_STAR_cpp/main.cpp
#        158B_Taxi_STAR_cpp/other_01.cpp
#        160A_Twins_cpp/one.cpp
#        160A_Twins_cpp/two.cpp
#        1A_Theatre_Square_cpp/main.cpp
#        208A_Dubstep_cpp/one.cpp
#        208A_Dubstep_cpp/two.cpp
#        226A_Stones_on_the_Table_cpp/main.cpp
#        230B_T-primes_cpp/main.cpp
#        231A_Team_cpp/main.cpp
#        236A_Boy_or_Girl_cpp/one.cpp
#        25A_IQ_test_cpp/one.cpp
#        263A_Beautiful_Matrix_cpp/main.cpp
#        266B_Queue_at_the_School_cpp/one.cpp
#        268A_Games_cpp/one.cpp
#        271A_Beautiful_Year_cpp/one.cpp
#        271A_Beautiful_Year_cpp/two.cpp
#        281A_Word_Capitalization_cpp/main.cpp
#        282A_Bit++_cpp/main.cpp
#        282A_Bit++_cpp/other.cpp
#        318A_Even_Odds_STAR_cpp/one.cpp
#        337A_Puzzles_cpp/one.cpp
#        339A_Helpful_Maths_cpp/main.cpp
#        344A_Magnets_cpp/one.cpp
#        405A_Gravity_Flip_cpp/one.cpp
#        41A_Translation_cpp/one.cpp
#        443A_Anton_and_Letters_cpp/one.cpp
#        443A_Anton_and_Letters_STAR_cpp/one.cpp
#        451A_Game_With_Sticks_cpp/one.cpp
#        451A_Game_With_Sticks_cpp/two.cpp
#        467A_George_and_Accomodation_cpp/one.cpp
#        469A_I_Wanna_Be_the_Guy_cpp/one.cpp
#        472A_Design_Tutorial_Learn_from_Math_STAR_cpp/answer.cpp
#        472A_Design_Tutorial_Learn_from_Math_STAR_cpp/one.cpp
#        479A_Expression_cpp/one.cpp
#        486A_Calculating_Function_STAR_cpp/one.cpp
#        4A_Watermelon_cpp/watermelon.cpp
#        50A_Domino_piling_cpp/main.cpp
#        510A_Fox_And_Snake_cpp/main.cpp
#        510A_Fox_And_Snake_cpp/other_solution.cpp
#        546A_Soldier_and_Bananas_cpp/one.cpp
#        546A_Soldier_and_Bananas_cpp/three_arithematic.cpp
#        546A_Soldier_and_Bananas_cpp/two.cpp
#        556A_Case_of_the_Zeros_and_Ones_cpp/main.cpp
#        580A_Kefa_and_First_Steps_cpp/one.cpp
#        58A_Chat_room_cpp/one.cpp
#        59A_Word_cpp/one.cpp
#        59A_Word_cpp/using_char.cpp
#        617A_Elephant_STAR_cpp/lesson.cpp
#        617A_Elephant_STAR_cpp/one.cpp
#        617A_Elephant_STAR_cpp/three.cpp
#        617A_Elephant_STAR_cpp/two.cpp
#        61A_Ultra-Fast_Mathematician_cpp/one.cpp
#        61A_Ultra-Fast_Mathematician_cpp/two.cpp
#        69A_Young_Physicist_STAR_cpp/one.cpp
#        71A_Way_Too_Long_Words_cpp/main.cpp
#        734A_Anton_and_Danik_cpp/one.cpp
#        96A_Football_cpp/c_answer.cpp
#        96A_Football_cpp/main.cpp
        155A_I_love_username_cpp/main.cpp
        )
